--- a/Areas/Identity/Pages/Account/Manage/Profile.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Profile.cshtml
@@ -10,8 +10,26 @@
 
 <div class="row">
     <div class="col-md-6">
-        <form id="profile-form" method="post">
+        <form id="profile-form" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="All" class="text-danger"></div>
+
+            <!-- Profile Picture -->
+            <div class="mb-3 text-center">
+                @if (!string.IsNullOrEmpty(Model.ProfilePictureUrl))
+                {
+                    <img src="@Model.ProfilePictureUrl" class="img-thumbnail rounded-circle" style="width: 150px; height: 150px;" alt="Profile Picture">
+                }
+                else
+                {
+                    <img src="/images/profiles/default-avatar.png" class="img-thumbnail rounded-circle" style="width: 150px; height: 150px;" alt="Default Profile Picture">
+                }
+            </div>
+
+            <div class="form-floating mb-3">
+                <input type="file" asp-for="Input.ProfilePicture" class="form-control" accept="image/*" />
+                <label asp-for="Input.ProfilePicture" class="form-label"></label>
+                <span asp-validation-for="Input.ProfilePicture" class="text-danger"></span>
+            </div>
 
             <!-- First Name -->
             <div class="form-floating mb-3">
